CASMUSER-2899 add multi-instance UAI support to UAI Classes
